--- a/items.html
+++ b/items.html
@@ -30,32 +30,30 @@
     .title { font-weight: 800; font-size: 1.25rem; }
     .shop-name { font-weight: 700; font-size: 0.9375rem; }
     main { max-width: 75rem; margin: 2rem auto; padding: 0 1rem; }
-    .items-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; }
+    .items-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem; }
     .item-card { 
       background: var(--card-white); border-radius: var(--radius-lg); overflow: hidden;
       box-shadow: var(--shadow); border: 1px solid var(--border-light); 
-      display: flex; align-items: center; padding: 1rem;
+      display: flex; align-items: center; padding: 1rem; gap: 1rem;
       transition: transform var(--transition), box-shadow var(--transition); 
-      max-height: 140px; position: relative; cursor: grab;
+      height: 140px; position: relative; user-select: none;
     }
-    .item-card:active { cursor: grabbing; }
-    .item-card:hover { transform: translateY(-0.25rem); box-shadow: 0 0.75rem 2rem rgba(15,23,42,0.1); }
-    .item-img { width: 120px; height: 120px; object-fit: cover; background: #f0f0f0; border-radius: var(--radius-lg); }
-    .item-info { flex: 1; padding-right: 1rem; display: flex; flex-direction: column; gap: 0.25rem; }
-    .item-name { font-weight: 700; font-size: 1rem; word-break: break-word; }
-    .item-desc { font-size: 0.8125rem; color: var(--muted-text); line-height: 1.3; }
-    .price-container { display: flex; flex-direction: column; align-items: center; gap: 0.25rem; text-align: center; }
-    .old-price { font-size: 0.875rem; color: #888; text-decoration: line-through; font-weight: 500; }
-    .new-price { font-weight: 800; color: var(--brand-red); font-size: 1.25rem; }
-    .discount-badge { background: var(--brand-red); color: white; font-size: 0.6875rem; font-weight: 700;
-      padding: 0.1875rem 0.375rem; border-radius: 0.375rem; }
+    .item-card:hover { transform: translateY(-4px); }
+    .item-img { width: 110px; height: 110px; object-fit: cover; border-radius: var(--radius-lg); flex-shrink: 0; }
+    .item-info { flex: 1; display: flex; flex-direction: column; gap: 0.375rem; }
+    .item-name { font-weight: 700; font-size: 1rem; line-height: 1.3; }
+    .item-desc { font-size: 0.8125rem; color: var(--muted-text); }
+    .price-container { text-align: center; }
+    .new-price { font-weight: 900; color: var(--brand-red); font-size: 1.4rem; }
+    .old-price { font-size: 0.875rem; color: #888; text-decoration: line-through; }
+    .discount-badge { background: var(--brand-red); color: white; font-size: 0.75rem; font-weight: 700;
+      padding: 0.25rem 0.5rem; border-radius: 0.5rem; display: inline-block; margin-top: 0.25rem; }
     .quantity { 
-      position: absolute; bottom: 1rem; left: 1rem; 
-      background: rgba(48,188,26,0.1); color: var(--accent-green); 
-      font-weight: 700; padding: 0.25rem 0.75rem; border-radius: var(--radius-lg);
-      display: flex; align-items: center; gap: 0.5rem;
+      position: absolute; bottom: 0.75rem; left: 0.75rem; 
+      background: rgba(48,188,26,0.15); color: var(--accent-green); 
+      font-weight: 800; padding: 0.375rem 0.875rem; border-radius: var(--radius-lg);
+      font-size: 1rem;
     }
-    .qty { min-width: 1.5rem; text-align: center; }
     .cart-bar { position: fixed; left: 50%; transform: translateX(-50%); bottom: 2rem;
       width: calc(100% - 3rem); max-width: 28rem; padding: 0.875rem 1.25rem;
       background: rgba(255,255,255,0.9); backdrop-filter: blur(14px); border-radius: var(--radius-xl);
@@ -67,13 +65,23 @@
     .checkout-btn:hover { transform: translateY(-3px); }
     .login-banner { max-width: 75rem; margin: 1.5rem auto; padding: 1rem 1.5rem; border-radius: var(--radius-xl);
       background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); box-shadow: var(--shadow); text-align: center; font-weight: 600; }
-    @media (max-width: 420px) { .item-img { width: 100px; height: 100px; } .item-card { max-height: 120px; padding: 0.75rem; } }
+
     /* Demo Overlay */
-    #demoOverlay { position: fixed; inset: 0; background: rgba(0,0,0,0.85); z-index: 100; display: flex; align-items: center; justify-content: center; flex-direction: column; gap: 1.5rem; color: white; text-align: center; padding: 2rem; }
-    #demoCard { transform: scale(0.9); }
+    #demoOverlay {
+      position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 100;
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
+      gap: 1.5rem; color: white; text-align: center; padding: 2rem; transition: opacity 0.5s;
+    }
+    #demoCard { transition: transform 0.6s ease; }
     .demo-text { font-size: 1.125rem; font-weight: 600; }
-    .demo-arrow { font-size: 2rem; animation: pulse 1.5s infinite; }
-    @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
+    .demo-arrow { font-size: 2.5rem; animation: pulse 1.5s infinite; }
+    @keyframes pulse { 0%,100% { opacity: 0.7; } 50% { opacity: 1; } }
+
+    @media (max-width: 480px) {
+      .item-card { height: 130px; padding: 0.75rem; gap: 0.75rem; }
+      .item-img { width: 100px; height: 100px; }
+      .new-price { font-size: 1.3rem; }
+    }
   </style>
 </head>
 <body>
@@ -105,25 +113,25 @@
 
   <!-- Demo Overlay -->
   <div id="demoOverlay">
-    <div class="demo-text">Swipe right to add/increase item</div>
+    <div class="demo-text">Swipe right → Add / Increase</div>
     <div class="demo-arrow">→</div>
     <div id="demoCard" class="item-card">
       <div class="item-info">
         <div class="item-name">Demo Item</div>
-        <div class="item-desc">Swipe to manage cart</div>
-        <div class="quantity"><div class="qty">0</div></div>
+        <div class="item-desc">Try swiping me!</div>
       </div>
       <div class="price-container">
-        <img src="https://via.placeholder.com/120" alt="Demo" class="item-img">
+        <div style="width:110px;height:110px;background:#ccc;border-radius:0.75rem;"></div>
         <div class="new-price">₹99</div>
       </div>
     </div>
     <div class="demo-arrow">←</div>
-    <div class="demo-text">Swipe left to decrease/remove</div>
-    <button style="background: var(--brand-red); color: white; padding: 0.75rem 1.5rem; border: none; border-radius: var(--radius-lg); cursor: pointer; font-weight: 700;" onclick="document.getElementById('demoOverlay').style.display='none';">Got it!</button>
+    <div class="demo-text">Swipe left → Decrease / Remove</div>
+    <button style="background:var(--brand-red);color:white;padding:0.75rem 1.5rem;border:none;border-radius:0.75rem;font-weight:700;cursor:pointer;">
+      Got it!
+    </button>
   </div>
 
-  <!-- External JS -->
   <script src="items.js"></script>
 </body>
 </html>
