--- a/items.html
+++ b/items.html
@@ -9,127 +9,125 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     :root {
-      --brand-red: #f12916; --brand-yellow: #f4ff2a; --accent-green: #30bc1a;
-      --text-dark: #111827; --bg-light: #e6f0fb; --card-white: #ffffff;
-      --muted-text: #0f1b34; --border-light: rgba(14,19,26,0.08);
-      --radius-xl: 1.5rem; --radius-lg: 0.75rem;
-      --transition: 0.28s cubic-bezier(0.2,0.8,0.4,1);
-      --shadow: 0 10px 20px -5px rgba(15,23,42,0.1), 0 4px 6px -2px rgba(15,23,42,0.05);
+      --bg-light: #fffaf4;
+      --dark-bg: #1e1e1e;
+      --text-light: #f0f0f0;
+      --brand-yellow: #ffd60a;
+      --brand-red: #e1192a;
+      --muted: #aaaaaa;
+      --radius: 32px;
+      --transition: 0.4s ease;
     }
     * { box-sizing: border-box; margin:0; padding:0; }
-    body { font-family: 'Outfit', sans-serif; background: var(--bg-light); color: var(--text-dark); padding-bottom: 7.5rem; min-height: 100vh; }
-    header[role="banner"] {
-      display: flex; align-items: center; justify-content: space-between; gap: 1rem;
-      padding: 0.875rem 1.25rem; background: linear-gradient(135deg, var(--brand-red), #ff6b6b);
-      color: white; border-bottom-left-radius: var(--radius-xl); border-bottom-right-radius: var(--radius-xl);
-      box-shadow: var(--shadow); position: sticky; top: 0; z-index: 60;
+    body { font-family: 'Outfit', sans-serif; background: var(--bg-light); min-height: 100vh; padding-bottom: 100px; }
+    header {
+      padding: 1.5rem 1.2rem 0;
     }
-    .back-btn { background: transparent; border: 0; color: inherit; width: 2.25rem; height: 2.25rem;
-      border-radius: 50%; display: grid; place-items: center; cursor: pointer; }
-    .back-btn:hover { background: rgba(255,255,255,0.15); }
-    .title { font-weight: 800; font-size: 1.25rem; }
-    .shop-name { font-weight: 700; font-size: 0.9375rem; }
-    main { max-width: 75rem; margin: 2rem auto; padding: 0 1rem; }
-    .items-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem; }
-    .item-card { 
-      background: var(--card-white); border-radius: var(--radius-lg); overflow: hidden;
-      box-shadow: var(--shadow); border: 1px solid var(--border-light); 
-      display: flex; align-items: center; padding: 1rem; gap: 1rem;
-      transition: transform var(--transition), box-shadow var(--transition); 
-      height: 140px; position: relative; user-select: none;
+    .back-btn {
+      background: white; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 44px; height: 44px; border-radius: 50%;
+      display: grid; place-items: center; cursor: pointer;
     }
-    .item-card:hover { transform: translateY(-4px); }
-    .item-img { width: 110px; height: 110px; object-fit: cover; border-radius: var(--radius-lg); flex-shrink: 0; }
-    .item-info { flex: 1; display: flex; flex-direction: column; gap: 0.375rem; }
-    .item-name { font-weight: 700; font-size: 1rem; line-height: 1.3; }
-    .item-desc { font-size: 0.8125rem; color: var(--muted-text); }
-    .price-container { text-align: center; }
-    .new-price { font-weight: 900; color: var(--brand-red); font-size: 1.4rem; }
-    .old-price { font-size: 0.875rem; color: #888; text-decoration: line-through; }
-    .discount-badge { background: var(--brand-red); color: white; font-size: 0.75rem; font-weight: 700;
-      padding: 0.25rem 0.5rem; border-radius: 0.5rem; display: inline-block; margin-top: 0.25rem; }
-    .quantity { 
-      position: absolute; bottom: 0.75rem; left: 0.75rem; 
-      background: rgba(48,188,26,0.15); color: var(--accent-green); 
-      font-weight: 800; padding: 0.375rem 0.875rem; border-radius: var(--radius-lg);
-      font-size: 1rem;
+    .shop-title {
+      font-size: 2.4rem; font-weight: 800; margin: 1rem 0 0.5rem; color: #000;
     }
-    .cart-bar { position: fixed; left: 50%; transform: translateX(-50%); bottom: 2rem;
-      width: calc(100% - 3rem); max-width: 28rem; padding: 0.875rem 1.25rem;
-      background: rgba(255,255,255,0.9); backdrop-filter: blur(14px); border-radius: var(--radius-xl);
-      box-shadow: var(--shadow); border: 1px solid rgba(255,255,255,0.5);
-      display: flex; align-items: center; justify-content: space-between; z-index: 70; cursor: pointer; }
-    .checkout-btn { background: linear-gradient(45deg, var(--brand-yellow), #ffd688); color: #000;
-      border: none; padding: 0.75rem 1.25rem; border-radius: var(--radius-lg); font-weight: 900;
-      cursor: pointer; box-shadow: 0 4px 10px rgba(255,177,42,0.3); transition: transform var(--transition); }
-    .checkout-btn:hover { transform: translateY(-3px); }
-    .login-banner { max-width: 75rem; margin: 1.5rem auto; padding: 1rem 1.5rem; border-radius: var(--radius-xl);
-      background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); box-shadow: var(--shadow); text-align: center; font-weight: 600; }
+    .shop-subtitle {
+      font-size: 1rem; color: var(--muted); margin-bottom: 1rem;
+    }
 
-    /* Demo Overlay */
-    #demoOverlay {
-      position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 100;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      gap: 1.5rem; color: white; text-align: center; padding: 2rem; transition: opacity 0.5s;
+    .hero-container {
+      position: relative; margin: 0 1rem 2rem; border-radius: var(--radius); overflow: hidden;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.15);
     }
-    #demoCard { transition: transform 0.6s ease; }
-    .demo-text { font-size: 1.125rem; font-weight: 600; }
-    .demo-arrow { font-size: 2.5rem; animation: pulse 1.5s infinite; }
-    @keyframes pulse { 0%,100% { opacity: 0.7; } 50% { opacity: 1; } }
+    .hero-img {
+      width: 100%; height: 340px; object-fit: cover;
+    }
+
+    .items-section {
+      background: var(--dark-bg); border-radius: var(--radius) var(--radius) 0 0; padding: 3rem 1rem 1rem; margin-top: -40px; position: relative;
+    }
+    .section-title {
+      color: white; font-size: 1.6rem; font-weight: 700; margin-bottom: 1.5rem; text-align: left; padding-left: 1rem;
+    }
+
+    .items-grid {
+      display: grid; gap: 1.2rem;
+    }
+
+    .item-card {
+      background: #2a2a2a; border-radius: 24px; overflow: hidden; display: flex; height: 150px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3); transition: var(--transition); position: relative;
+    }
+    .item-card:hover { transform: translateY(-6px); }
+
+    .item-img-small {
+      width: 130px; height: 130px; object-fit: cover; border-radius: 20px; margin: 10px; box-shadow: 0 6px 16px rgba(0,0,0,0.4);
+    }
+
+    .item-info {
+      flex: 1; padding: 1.2rem 0; display: flex; flex-direction: column; justify-content: center; gap: 0.5rem;
+    }
+    .item-name {
+      color: white; font-weight: 700; font-size: 1.15rem; line-height: 1.3;
+    }
+    .price-cal {
+      color: var(--brand-yellow); font-weight: 800; font-size: 1.4rem;
+    }
+    .calories {
+      color: var(--muted); font-size: 0.9rem; margin-top: 4px;
+    }
+
+    .new-badge {
+      position: absolute; top: 10px; left: 10px; background: var(--brand-yellow); color: black;
+      padding: 0.4rem 0.8rem; border-radius: 30px; font-weight: 800; font-size: 0.9rem;
+    }
+
+    .quantity-badge {
+      position: absolute; bottom: 12px; left: 12px; background: var(--accent-green); color: white;
+      width: 44px; height: 44px; border-radius: 50%; display: grid; place-items: center;
+      font-weight: 800; font-size: 1.2rem; box-shadow: 0 6px 16px rgba(39,174,96,0.5);
+    }
+
+    .cart-bar {
+      position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
+      width: calc(100% - 2rem); max-width: 400px; background: white; border-radius: var(--radius);
+      padding: 1.2rem 1.6rem; box-shadow: 0 16px 40px rgba(0,0,0,0.25); display: flex; justify-content: space-between; align-items: center;
+    }
+    .add-to-bag-btn {
+      background: var(--brand-yellow); color: black; border: none; padding: 1rem 2.2rem; border-radius: 50px;
+      font-weight: 900; font-size: 1.2rem; box-shadow: 0 8px 20px rgba(255,214,10,0.4); cursor: pointer;
+    }
 
     @media (max-width: 480px) {
-      .item-card { height: 130px; padding: 0.75rem; gap: 0.75rem; }
-      .item-img { width: 100px; height: 100px; }
-      .new-price { font-size: 1.3rem; }
+      .shop-title { font-size: 2rem; }
+      .hero-img { height: 280px; }
+      .items-grid { grid-template-columns: 1fr; }
+      .item-card { height: 140px; }
+      .item-img-small { width: 110px; height: 110px; }
     }
   </style>
 </head>
 <body>
-  <header role="banner">
-    <div class="brand" style="flex:1">
-      <button class="back-btn" id="backBtn"><i class="fas fa-arrow-left"></i></button>
-      <div style="margin-left:8px">
-        <div class="title"><span style="color:#f4ff2a">Chat</span>Point</div>
-        <div style="font-size:12px;color:#fff8">Sindagi • Food Delivery</div>
-      </div>
-    </div>
-    <div class="shop-name" id="shopName">Loading...</div>
+  <header>
+    <button class="back-btn" id="backBtn"><i class="fas fa-arrow-left" style="font-size:1.3rem;color:#333;"></i></button>
+    <div class="shop-title" id="shopName">Loading...</div>
+    <div class="shop-subtitle">Fresh • Fast Delivery</div>
   </header>
 
-  <main>
-    <div id="loginBanner" class="login-banner" style="display:none;">
-      Please <a href="login.html">login</a> to add items to cart.
-    </div>
-    <section class="items-grid" id="itemsGrid"></section>
-  </main>
-
-  <div class="cart-bar" id="cartBar" style="display:none">
-    <div class="cart-info">
-      <div class="main" id="cartText">0 items · ₹0</div>
-      <div class="sub">Tap to view cart</div>
-    </div>
-    <button class="checkout-btn" id="checkoutBtn">Checkout</button>
+  <div class="hero-container">
+    <img id="heroImage" src="" alt="Shop Hero" class="hero-img">
   </div>
 
-  <!-- Demo Overlay -->
-  <div id="demoOverlay">
-    <div class="demo-text">Swipe right → Add / Increase</div>
-    <div class="demo-arrow">→</div>
-    <div id="demoCard" class="item-card">
-      <div class="item-info">
-        <div class="item-name">Demo Item</div>
-        <div class="item-desc">Try swiping me!</div>
-      </div>
-      <div class="price-container">
-        <div style="width:110px;height:110px;background:#ccc;border-radius:0.75rem;"></div>
-        <div class="new-price">₹99</div>
-      </div>
+  <section class="items-section">
+    <h2 class="section-title">Our Popular Items</h2>
+    <div class="items-grid" id="itemsGrid"></div>
+  </section>
+
+  <div class="cart-bar" id="cartBar" style="display:none;">
+    <div>
+      <div id="cartText" style="font-weight:800;font-size:1.2rem;">0 items · ₹0</div>
+      <div style="color:#888;font-size:0.95rem;">Extra charges may apply</div>
     </div>
-    <div class="demo-arrow">←</div>
-    <div class="demo-text">Swipe left → Decrease / Remove</div>
-    <button style="background:var(--brand-red);color:white;padding:0.75rem 1.5rem;border:none;border-radius:0.75rem;font-weight:700;cursor:pointer;">
-      Got it!
-    </button>
+    <button class="add-to-bag-btn" id="checkoutBtn">Add To Bag →</button>
   </div>
 
   <script src="items.js"></script>
